fix: reorder providers in collection

--- a/docs/installation_and_basic_usage.ipynb
+++ b/docs/installation_and_basic_usage.ipynb
@@ -114,21 +114,21 @@
       "{\n",
       "    \"type\": \"Feature\",\n",
       "    \"stac_version\": \"1.0.0\",\n",
-      "    \"id\": \"esa_worldcover_10m_2020_v100_n66e177\",\n",
+      "    \"id\": \"ESA_WorldCover_10m_2020_v100_N66E177\",\n",
       "    \"properties\": {\n",
-      "        \"description\": \"ESA WorldCover product at 10m resolution for year 2020\",\n",
-      "        \"created\": \"2022-04-06T09:40:56.123137Z\",\n",
-      "        \"mission\": \"Sentinel-1, Sentinel-2\",\n",
-      "        \"platform\": \"Sentinel-1A, Sentinel-1B, Sentinel-2A, Sentinel-2B\",\n",
-      "        \"instruments\": [\n",
-      "            \"C-SAR\",\n",
-      "            \"MSI\"\n",
-      "        ],\n",
       "        \"start_datetime\": \"2020-01-01T00:00:00Z\",\n",
       "        \"end_datetime\": \"2020-12-31T23:59:59Z\",\n",
       "        \"esa_worldcover:product_tile\": \"N66E177\",\n",
+      "        \"description\": \"ESA WorldCover product at 10m resolution for year 2020\",\n",
+      "        \"created\": \"2022-04-15T01:18:29.103335Z\",\n",
+      "        \"mission\": \"sentinel-1, sentinel-2\",\n",
+      "        \"platform\": \"sentinel-1a, sentinel-1b, sentinel-2a, sentinel-2b\",\n",
+      "        \"instruments\": [\n",
+      "            \"c-sar\",\n",
+      "            \"msi\"\n",
+      "        ],\n",
       "        \"proj:epsg\": 4326,\n",
-      "        \"datetime\": \"2020-01-01T00:00:00Z\"\n",
+      "        \"datetime\": null\n",
       "    },\n",
       "    \"geometry\": {\n",
       "        \"type\": \"Polygon\",\n",
@@ -164,24 +164,13 @@
       "            \"type\": \"image/tiff; application=geotiff; profile=cloud-optimized\",\n",
       "            \"title\": \"Land Cover Classes\",\n",
       "            \"description\": \"Discrete classification according to the Land Cover Classification System scheme developed by the United Nations Food and Agriculture Organization\",\n",
-      "            \"created\": \"2021-10-12T16:51:26.705020Z\",\n",
-      "            \"proj:transform\": [\n",
-      "                0.0029296875,\n",
-      "                0.0,\n",
-      "                177.0,\n",
-      "                0.0,\n",
-      "                -0.0029296875,\n",
-      "                69.0\n",
-      "            ],\n",
-      "            \"proj:shape\": [\n",
-      "                1024,\n",
-      "                1024\n",
-      "            ],\n",
       "            \"raster:bands\": [\n",
       "                {\n",
+      "                    \"name\": \"Band1\",\n",
+      "                    \"description\": \"Classification values\",\n",
       "                    \"nodata\": 0,\n",
       "                    \"sampling\": \"area\",\n",
-      "                    \"data_type\": \"uint16\",\n",
+      "                    \"data_type\": \"uint8\",\n",
       "                    \"spatial_resolution\": 10\n",
       "                }\n",
       "            ],\n",
@@ -242,50 +231,21 @@
       "                    \"color-hint\": \"FAE6A0\"\n",
       "                }\n",
       "            ],\n",
-      "            \"roles\": [\n",
-      "                \"data\"\n",
-      "            ]\n",
-      "        },\n",
-      "        \"input_quality\": {\n",
-      "            \"href\": \"/Users/pjh/dev/esa-worldcover/tests/data-files/ESA_WorldCover_10m_2020_v100_N66E177_Map/ESA_WorldCover_10m_2020_v100_N66E177_InputQuality.tif\",\n",
-      "            \"type\": \"image/tiff; application=geotiff; profile=cloud-optimized\",\n",
-      "            \"title\": \"Classification Input Data Quality\",\n",
-      "            \"description\": \"Per pixel quality indicator showing the quality of the electro-optical input data. Band 1 contains the number of Sentinel-1 GAMMA0 observations used in the classification workflow. Band 2 contains the number of Sentinel-2 L2A observations used in the classification workflow. Band 3 contains the percentage (0-100) of invalid S2 observations discarded in the classification workflow (after cloud and cloud shadow filtering).\",\n",
-      "            \"created\": \"2021-10-14T21:13:32.209529Z\",\n",
       "            \"proj:transform\": [\n",
-      "                0.005859375,\n",
+      "                0.0029296875,\n",
       "                0.0,\n",
       "                177.0,\n",
       "                0.0,\n",
-      "                -0.005859375,\n",
+      "                -0.0029296875,\n",
       "                69.0\n",
       "            ],\n",
       "            \"proj:shape\": [\n",
-      "                512,\n",
-      "                512\n",
+      "                1024,\n",
+      "                1024\n",
       "            ],\n",
-      "            \"raster:bands\": [\n",
-      "                {\n",
-      "                    \"nodata\": -1,\n",
-      "                    \"sampling\": \"area\",\n",
-      "                    \"data_type\": \"int16\",\n",
-      "                    \"spatial_resolution\": 60\n",
-      "                },\n",
-      "                {\n",
-      "                    \"nodata\": -1,\n",
-      "                    \"sampling\": \"area\",\n",
-      "                    \"data_type\": \"int16\",\n",
-      "                    \"spatial_resolution\": 60\n",
-      "                },\n",
-      "                {\n",
-      "                    \"nodata\": -1,\n",
-      "                    \"sampling\": \"area\",\n",
-      "                    \"data_type\": \"int16\",\n",
-      "                    \"spatial_resolution\": 60\n",
-      "                }\n",
-      "            ],\n",
+      "            \"created\": \"2021-10-12T16:51:26.705020Z\",\n",
       "            \"roles\": [\n",
-      "                \"metadata\"\n",
+      "                \"data\"\n",
       "            ]\n",
       "        }\n",
       "    },\n",
